--- a/index.html
+++ b/index.html
@@ -1,9 +1,46 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<title>About Me</title>
+ 	<link rel="stylesheet"href="assets/css/reset.css">
+ 	<link rel="stylesheet"href="assets/css/style.css">
 </head>
 <body>
+	<div class="container">
+		<header> 
+				<h1>Johnny MoctezumaM</h1>
+				About | Portfolio | Contact
+		</header>
+		<div class="clear"></div>
+		<section id="about-me">
+			<h2>About Me</h2>
+			<hr>
+			<img class="mypic" src="assets/images/me.jpg" alt="Picture of Me">
+			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec nisi dolor, auctor vitae arcu quis, tristique tempus neque. Nunc facilisis in justo eget dapibus. Quisque tristique, elit sed tempor vestibulum, urna felis interdum quam, sit amet scelerisque elit odio ut orci. Aenean mattis mi turpis, nec mattis ex fringilla at. In facilisis hendrerit maximus. Aliquam imperdiet molestie vulputate. Donec a augue sit amet arcu consequat ornare nec et purus.
 
+	 		finibus, mi eu dictum ultrices, arcu mauris venenatis nisl, id pulvinar eros leo id ex. Sed in porttitor nisl, id vulputate nibh. Quisque at consequat massa. Duis ut porta erat. Donec posuere, mi in placerat rhoncus, ex leo mattis erat, in auctor diam justo eget ligula. Aliquam sagittis quam metus, a eleifend tellus elementum nec. Donec accumsan odio dolor, ac pharetra enim finibus a. Integer placerat risus sed nibh aliquam mattis eget nec dolor. Nam rhoncus lorem velit, nec bibendum eros lobortis consequat. Nunc eu diam eget libero egestas ornare ac eu nibh. Donec lobortis turpis quis orci tempor consequat. Aenean ut pharetra nunc, at viverra nisi. Suspendisse interdum facilisis tincidunt. Quisque euismod ut est molestie cursus. Quisque vitae ornare est. Phasellus sit amet libero a ligula congue gravida id id nisi.
+	 		<p>
+		</section>
+		<aside>
+		 	Connect with me
+		 	<hr>
+		 	<img src="assets/images/github.png" alt="Github Icon">
+		 	<img src="assets/images/linkedin.png" alt="LinkedIn Icon">
+		 	<img src="assets/images/stackOverflow.png" alt="Stack Overflow Icon">
+		</aside>		
+	</div>
 </body>
 </html>
+
+<!-- 
+<section id="about-me"> THIS WIDTH IS 960PX
+	
+	<h1>AboutME</h1>
+	<hr/>
+	<div>
+	 <img />
+	 <span>adfafasdaf</span>
+	<div>
+	
+</section> 
+-->
