--- a/index.html
+++ b/index.html
@@ -1,46 +1,53 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html lang="en-us">
+
 <head>
-	<title>About Me</title>
- 	<link rel="stylesheet"href="assets/css/reset.css">
- 	<link rel="stylesheet"href="assets/css/style.css">
+  <meta charset="UTF-8">
+  <title>heyitsjohnny</title>
+  <link rel="stylesheet" type="text/css" href="assets/reset.css">
+  <link rel="stylesheet" type="text/css" href="assets/css.css">
 </head>
+
 <body>
-	<div class="container">
-		<header> 
-				<h1>Johnny MoctezumaM</h1>
-				About | Portfolio | Contact
-		</header>
-		<div class="clear"></div>
-		<section id="about-me">
-			<h2>About Me</h2>
-			<hr>
-			<img class="mypic" src="assets/images/me.jpg" alt="Picture of Me">
-			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec nisi dolor, auctor vitae arcu quis, tristique tempus neque. Nunc facilisis in justo eget dapibus. Quisque tristique, elit sed tempor vestibulum, urna felis interdum quam, sit amet scelerisque elit odio ut orci. Aenean mattis mi turpis, nec mattis ex fringilla at. In facilisis hendrerit maximus. Aliquam imperdiet molestie vulputate. Donec a augue sit amet arcu consequat ornare nec et purus.
 
-	 		finibus, mi eu dictum ultrices, arcu mauris venenatis nisl, id pulvinar eros leo id ex. Sed in porttitor nisl, id vulputate nibh. Quisque at consequat massa. Duis ut porta erat. Donec posuere, mi in placerat rhoncus, ex leo mattis erat, in auctor diam justo eget ligula. Aliquam sagittis quam metus, a eleifend tellus elementum nec. Donec accumsan odio dolor, ac pharetra enim finibus a. Integer placerat risus sed nibh aliquam mattis eget nec dolor. Nam rhoncus lorem velit, nec bibendum eros lobortis consequat. Nunc eu diam eget libero egestas ornare ac eu nibh. Donec lobortis turpis quis orci tempor consequat. Aenean ut pharetra nunc, at viverra nisi. Suspendisse interdum facilisis tincidunt. Quisque euismod ut est molestie cursus. Quisque vitae ornare est. Phasellus sit amet libero a ligula congue gravida id id nisi.
-	 		<p>
-		</section>
-		<aside>
-		 	Connect with me
-		 	<hr>
-		 	<img src="assets/images/github.png" alt="Github Icon">
-		 	<img src="assets/images/linkedin.png" alt="LinkedIn Icon">
-		 	<img src="assets/images/stackOverflow.png" alt="Stack Overflow Icon">
-		</aside>		
-	</div>
+  <header id="masthead">
+    <div class="container">
+      <a href="index.html" id="logo">Johnny Moctezuma</a>
+      <nav>
+        <a href="index.html">About</a>
+        <a href="portfolio.html">Portfolio</a>
+        <a href="contact.html">Contact</a>
+      </nav>
+    </div>
+  </header>
+
+  <div id="main-container" class="container">
+    <section class="main-section">
+      <h1>About Me</h1>
+
+      <img src="assets/images/me.jpg" alt="photo of me" style="width: 200px; height: 200px;" class="img-circle">
+
+      <p>My name is Johnny and I am from Orange County, California. I currently work in the automotive field however I am currently in a Full-Stack Flex Program to learn what it takes to be a programmer.</p>
+
+      <p>Some of the great companies I have worked for are Apple Inc., Tesla, and Ferrari. It's been a great privilege to work for such great reputable companies at such a young age. </p>
+
+    </section>
+
+    <section class="sidebar">
+      <div id="connect">
+        <h2>Connect with Me</h2>
+          <a href="https://www.linkedin.com/in/johnny-moctezuma-52a83939"target="_blank"><img src="assets/images/linkedin.png" class="social" alt="LinkedIn" style="height: 65px; width: 65px;"></a>
+        <a href="https://stackoverflow.com/users/8135065/heyitsjohnny"target="_blank"><img src="assets/images/stackoverflow.png" class="social" alt="Stack Overflow" style="height: 60px; width: 60px;"></a>
+        <a href="https://github.com/HEYITSJ0HNNY"target=_"blank"><img src="assets/images/github.png" class="social" alt="Github" style="height: 60px; width: 60px;"></a>
+      </div>
+    </section>
+  </div>
+
+  <footer>
+    <div class="container">
+      Copyright &copy; 2017 Johnny Moctezuma
+    </div>
+  </footer>
 </body>
-</html>
 
-<!-- 
-<section id="about-me"> THIS WIDTH IS 960PX
-	
-	<h1>AboutME</h1>
-	<hr/>
-	<div>
-	 <img />
-	 <span>adfafasdaf</span>
-	<div>
-	
-</section> 
--->
+</html>
